--- a/SlantedDoor/Base.lproj/Main.storyboard
+++ b/SlantedDoor/Base.lproj/Main.storyboard
@@ -837,10 +837,22 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sVz-03-ZQS" userLabel="81Button">
+                                <rect key="frame" x="240" y="770" width="140" height="140"/>
+                                <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="140" id="Biy-ip-6Sz"/>
+                                    <constraint firstAttribute="width" constant="140" id="eQz-Mr-RId"/>
+                                </constraints>
+                                <state key="normal" title="81">
+                                    <color key="titleColor" red="0.1686756237" green="0.13989934239999999" blue="0.62819241749999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="tem-BF-ZuW" firstAttribute="centerX" secondItem="7SH-Gz-s4l" secondAttribute="centerX" id="08P-BG-LHY"/>
+                            <constraint firstItem="sVz-03-ZQS" firstAttribute="centerX" secondItem="s62-B7-KN0" secondAttribute="centerX" id="1rz-wG-Ba9"/>
                             <constraint firstItem="5op-3D-8Tb" firstAttribute="top" secondItem="O9a-9c-03W" secondAttribute="bottom" constant="8" id="22a-Jf-cFW"/>
                             <constraint firstItem="A4b-dC-5NK" firstAttribute="top" secondItem="5op-3D-8Tb" secondAttribute="bottom" constant="8" id="3i7-dv-Mlm"/>
                             <constraint firstItem="u6X-v9-hTE" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="42X-UV-0gw"/>
@@ -860,6 +872,7 @@
                             <constraint firstItem="7FU-I3-Da3" firstAttribute="top" secondItem="hOZ-Kg-7cN" secondAttribute="bottom" constant="36" id="BhO-Kb-0Zb"/>
                             <constraint firstItem="tem-BF-ZuW" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Cxf-9U-q9C"/>
                             <constraint firstItem="hOZ-Kg-7cN" firstAttribute="leading" secondItem="P1x-6K-GQK" secondAttribute="trailing" constant="8" id="DXZ-DE-tAE"/>
+                            <constraint firstItem="c2g-ru-1jO" firstAttribute="top" secondItem="sVz-03-ZQS" secondAttribute="bottom" constant="20" id="H3B-7g-Svs"/>
                             <constraint firstItem="u6X-v9-hTE" firstAttribute="leading" secondItem="RBj-HH-rZX" secondAttribute="trailing" constant="588" id="Hc3-1s-1ca"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="tem-BF-ZuW" secondAttribute="trailing" constant="20" id="Hdg-2q-2gr"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="u6X-v9-hTE" secondAttribute="trailing" constant="20" id="IT1-DY-LId"/>
